--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,8 @@
   --background-color-primary: #fff;
   --background-color-gradient: linear-gradient(to right, #eecda3, #ef629f);
   --color-secondary: #a40f4f;
-  --color-correct: #8dfc8d9d;
-  --color-wrong: #f5a8a89f;
+  --color-correct: #a2e8a29d;
+  --color-wrong: #f22d2d56;
 }
 
 /* CSS reset */
@@ -81,9 +81,8 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  max-width: 80rem;
+  max-width: 80%;
   margin: 0 auto;
   overflow: hidden;
 }
@@ -123,7 +122,6 @@ h3 {
   text-decoration: none;
   color: var(--color-secondary);
   text-transform: uppercase;
-  background-color: inherit;
 }
 
 .btn:hover {
@@ -133,49 +131,71 @@ h3 {
   transition: transform 150ms;
 }
 
-#quiz-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 2.5rem;
-}
-
 .question-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: center;
   gap: 1.5rem;
-  min-width: 70rem;
-  min-height: 40rem;
+  max-width: 60rem;
+  width: 80%;
+  height: 40rem;
   background-color: var(--background-color-primary);
   border-radius: 1rem;
-  padding: 3rem 7rem;
+  padding: 1rem 2rem;
 }
 
-#question {
+.answer-container {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  font-size: 1.5rem;
+  border: 0.1rem solid var(--color-secondary);
+}
+
+.answer-prefix {
+  padding: 1rem 1.6rem;
+  margin-right: 0.8rem;
+  background-color: var(--color-secondary);
+  color: var(--background-color-primary);
+}
+/* #question {
   text-align: center;
 }
 
 .answers {
   width: 40rem;
-}
+} */
 
 .answers label {
-  display: flex;
+  /* display: flex;
   align-items: center;
   margin-bottom: 1.5rem;
   width: 100%;
   font-size: 1.3rem;
-  border: 0.1rem solid var(--color-secondary);
+  border: 0.1rem solid var(--color-secondary); */
 }
 
-.answers label:hover {
+/* .answers label:hover {
   cursor: pointer;
   box-shadow: 0 0.4rem 1.4rem 0 rgba(163, 7, 85, 0.5);
   transform: translateY(-0.1rem);
   transition: transform 150ms;
+} */
+
+.disabled {
+  cursor: not-allowed;
+  opacity: 0.5;
+}
+/* 
+.answer-container {
+  display: flex;
+  margin-bottom: 0.5rem;
+  width: 100%;
+  font-size: 1.8rem;
+  border: 0.1rem solid rgb(86, 165, 235, 0.25);
+  background-color: white;
 }
 
 .answers span {
@@ -183,7 +203,7 @@ h3 {
   margin-right: 1rem;
   background-color: var(--color-secondary);
   color: var(--background-color-primary);
-}
+} */
 
 input[type='radio'] {
   display: none;
